# magicPresenter

./: .gitignore  CMakeLists.txt  HitPoint.h  detection-utils.h  image-detection.h  kinect_pcl_grabber.h  main.cpp
CMake-Modules/: FindOpenCV2.cmake
CursorApp/: App.xaml  App.xaml.cs  CloseCommand.cs  CursorApp.csproj  CursorApp.sln  MainWindow.xaml  MainWindow.xaml.cs
CursorApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
CursorApp/Resources/: cursor_orig.pdn
Keys/: SendKeys.cpp
screen/: ScreenImage.cpp
